--- a/guides.html
+++ b/guides.html
@@ -1,49 +1,151 @@
-<section id="guides" class="container content-section">
+<section id="guides-summary" class="container content-section">
     <h2 data-key="guides_section_title">📚 Guides Stratégiques</h2>
+    <p data-key="guides_summary_intro">Parcourez nos guides détaillés pour maîtriser tous les aspects du jeu.</p>
 
-    <div class="guide-category card">
-        <h3><button class="guide-toggle" data-target="guide-debut" aria-expanded="false" data-key="guide_beginner_title">Début de Jeu 🚀</button></h3>
-        <div id="guide-debut" class="guide-content">
-            <img src="https://via.placeholder.com/600x300/4a00e0/ffffff?text=Début+de+Jeu" alt="Début de Jeu" class="guide-image">
-            <ul>
-                <li><strong data-key="beginner_tip1_strong">Concentrez-vous sur le QG (Quartier Général) :</strong> <span data-key="beginner_tip1_text">Améliorez-le dès que possible pour débloquer de nouvelles fonctionnalités et bâtiments. C'est la clé de votre progression.</span></li>
-                <li><strong data-key="beginner_tip2_strong">Protégez vos ressources :</strong> <span data-key="beginner_tip2_text">Gardez vos ressources (nourriture, bois, pétrole, métal) sous le seuil de protection de votre entrepôt pour ne pas les perdre en cas d'attaque.</span></li>
-                <li><strong data-key="beginner_tip3_strong">Ne gaspillez pas vos accélérateurs :</strong> <span data-key="beginner_tip3_text">Gardez-les pour les constructions et recherches de haut niveau. Utilisez l'aide de l'alliance au maximum.</span></li>
-                <li><strong data-key="beginner_tip4_strong">Rejoignez une alliance active :</strong> <span data-key="beginner_tip4_text">C'est primordial pour recevoir de l'aide, participer à des événements, et être protégé.</span></li>
-                <li><strong data-key="beginner_tip5_strong">Montez vos héros d'exploration :</strong> <span data-key="beginner_tip5_text">Rusty, Miho, Sarge sont de bons choix pour l'exploration de la carte et les chasses aux infectés.</span></li>
-            </ul>
+    <div class="guide-list-grid">
+        <div class="guide-summary-card card">
+            <h3 data-key="guide_beginner_title">Début de Jeu 🚀</h3>
+            <p data-key="guide_beginner_summary">Conseils essentiels pour bien démarrer votre aventure et poser les bases de votre progression.</p>
+            <a href="#" data-page="guides-beginner" class="cta-button guide-summary-button" data-key="view_guide_button">Voir le guide</a>
         </div>
-    </div>
 
-    <div class="guide-category card">
-        <h3><button class="guide-toggle" data-target="guide-heros" aria-expanded="false" data-key="guide_heroes_title">Héros et Compétences 💪</button></h3>
-        <div id="guide-heros" class="guide-content">
-            <img src="https://via.placeholder.com/600x300/8e2de2/ffffff?text=Héros+et+Compétences" alt="Héros et Compétences" class="guide-image">
-            <ul>
-                <li><strong data-key="heroes_tip1_strong">Types de Héros :</strong>
-                    <ul>
-                        <li><strong data-key="heroes_tip1_type1_strong">Exploration/Combat (Rallye) :</strong> <span data-key="heroes_tip1_type1_text">Pour les chasses, les rallyes, et les attaques (ex: Rusty, Miho, Sarge).</span></li>
-                        <li><strong data-key="heroes_tip1_type2_strong">Développement (Intendance) :</strong> <span data-key="heroes_tip1_type2_text">Pour les bonus de construction, recherche, production de ressources (ex: Ghost, Travis, Eva).</span></li>
-                    </ul>
-                </li>
-                <li><strong data-key="heroes_tip2_strong">Focus sur quelques-uns :</strong> <span data-key="heroes_tip2_text">Au début, concentrez-vous sur 3-5 héros principaux pour l'exploration et les rallyes. Ne dispersez pas vos ressources.</span></li>
-                <li><strong data-key="heroes_tip3_strong">Éveil des Héros :</strong> <span data-key="heroes_tip3_text">Collectez des fragments de héros pour les éveiller et débloquer de puissantes compétences.</span></li>
-                <li><strong data-key="heroes_tip4_strong">Formation de Héro :</strong> <span data-key="heroes_tip4_text">Utilisez la formation pour gagner de l'expérience et des fragments.</span></li>
-            </ul>
+        <div class="guide-summary-card card">
+            <h3 data-key="guide_heroes_title">Héros et Compétences 💪</h3>
+            <p data-key="guide_heroes_summary">Optimisez vos héros : types, compétences, éveil et stratégies de formation.</p>
+            <a href="#" data-page="guides-heroes" class="cta-button guide-summary-button" data-key="view_guide_button">Voir le guide</a>
         </div>
-    </div>
 
-    <div class="guide-category card">
-        <h3><button class="guide-toggle" data-target="guide-ressources" aria-expanded="false" data-key="guide_resources_title">Gestion des Ressources 💰</button></h3>
-        <div id="guide-ressources" class="guide-content">
-            <img src="https://via.placeholder.com/600x300/4a00e0/ffffff?text=Gestion+des+Ressources" alt="Gestion des Ressources" class="guide-image">
-            <ul>
-                <li><strong data-key="resources_tip1_strong">Collecte sur la carte :</strong> <span data-key="resources_tip1_text">Envoyez vos troupes collecter de la nourriture, du bois, du pétrole, et du métal. Le niveau de la ressource influe sur la quantité.</span></li>
-                <li><strong data-key="resources_tip2_strong">Bâtiments de production :</strong> <span data-key="resources_tip2_text">Améliorez vos fermes, scieries, raffineries et fonderies. C'est une production passive mais essentielle.</span></li>
-                <li><strong data-key="resources_tip3_strong">Entrepôt :</strong> <span data-key="resources_tip3_text">Améliorez votre entrepôt pour augmenter le seuil de protection des ressources.</span></li>
-                <li><strong data-key="resources_tip4_strong">Missions et événements :</strong> <span data-key="resources_tip4_text">Participez aux événements quotidiens, hebdomadaires et aux missions de l'histoire pour gagner de grandes quantités de ressources.</span></li>
-                <li><strong data-key="resources_tip5_strong">Utilisation judicieuse :</strong> <span data-key="resources_tip5_text">Ne produisez pas un surplus de ressources au-delà de ce dont vous avez besoin pour vos prochaines constructions/recherches majeures, surtout si vous n'êtes pas bien protégé.</span></li>
-            </ul>
+        <div class="guide-summary-card card">
+            <h3 data-key="guide_resources_title">Gestion des Ressources 💰</h3>
+            <p data-key="guide_resources_summary">Maîtrisez la production, la collecte et la protection de vos précieuses ressources.</p>
+            <a href="#" data-page="guides-resources" class="cta-button guide-summary-button" data-key="view_guide_button">Voir le guide</a>
         </div>
-    </div>
+
+        <div class="guide-summary-card card">
+            <h3 data-key="koh_guide_title">King of the Hill (KoH) 👑</h3>
+            <p data-key="koh_guide_summary">Stratégies détaillées étape par étape pour dominer l'événement King of the Hill.</p>
+            <a href="#" data-page="guides-koh" class="cta-button guide-summary-button" data-key="view_guide_button">Voir le guide</a>
+        </div>
+
+        <div class="guide-summary-card card">
+            <h3 data-key="joiner_bonus_guide_title">Joiner Bonus 🛡️</h3>
+            <p data-key="joiner_bonus_summary">Comprenez les bonus de résistance d'armée et quels héros utiliser en tant que capitaine de rallye.</p>
+            <a href="#" data-page="guides-joiner-bonus" class="cta-button guide-summary-button" data-key="view_guide_button">Voir le guide</a>
+        </div>
+        </div>
 </section>
+
+<style>
+.guide-list-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 30px;
+    margin-top: 30px;
+}
+
+.guide-summary-card {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    text-align: center;
+    padding: 25px;
+}
+
+.guide-summary-card h3 {
+    margin-top: 0;
+    font-size: 1.8em;
+    color: var(--color-purple);
+}
+
+.guide-summary-card p {
+    flex-grow: 1;
+    margin-bottom: 20px;
+}
+
+.guide-summary-button {
+    margin-top: auto; /* Pousse le bouton vers le bas de la carte */
+    padding: 10px 20px;
+    font-size: 1em;
+    background-color: var(--color-blue);
+}
+
+.guide-summary-button:hover {
+    background-color: var(--color-cta-hover);
+}
+</style><section id="guides-summary" class="container content-section">
+    <h2 data-key="guides_section_title">📚 Guides Stratégiques</h2>
+    <p data-key="guides_summary_intro">Parcourez nos guides détaillés pour maîtriser tous les aspects du jeu.</p>
+
+    <div class="guide-list-grid">
+        <div class="guide-summary-card card">
+            <h3 data-key="guide_beginner_title">Début de Jeu 🚀</h3>
+            <p data-key="guide_beginner_summary">Conseils essentiels pour bien démarrer votre aventure et poser les bases de votre progression.</p>
+            <a href="#" data-page="guides-beginner" class="cta-button guide-summary-button" data-key="view_guide_button">Voir le guide</a>
+        </div>
+
+        <div class="guide-summary-card card">
+            <h3 data-key="guide_heroes_title">Héros et Compétences 💪</h3>
+            <p data-key="guide_heroes_summary">Optimisez vos héros : types, compétences, éveil et stratégies de formation.</p>
+            <a href="#" data-page="guides-heroes" class="cta-button guide-summary-button" data-key="view_guide_button">Voir le guide</a>
+        </div>
+
+        <div class="guide-summary-card card">
+            <h3 data-key="guide_resources_title">Gestion des Ressources 💰</h3>
+            <p data-key="guide_resources_summary">Maîtrisez la production, la collecte et la protection de vos précieuses ressources.</p>
+            <a href="#" data-page="guides-resources" class="cta-button guide-summary-button" data-key="view_guide_button">Voir le guide</a>
+        </div>
+
+        <div class="guide-summary-card card">
+            <h3 data-key="koh_guide_title">King of the Hill (KoH) 👑</h3>
+            <p data-key="koh_guide_summary">Stratégies détaillées étape par étape pour dominer l'événement King of the Hill.</p>
+            <a href="#" data-page="guides-koh" class="cta-button guide-summary-button" data-key="view_guide_button">Voir le guide</a>
+        </div>
+
+        <div class="guide-summary-card card">
+            <h3 data-key="joiner_bonus_guide_title">Joiner Bonus 🛡️</h3>
+            <p data-key="joiner_bonus_summary">Comprenez les bonus de résistance d'armée et quels héros utiliser en tant que capitaine de rallye.</p>
+            <a href="#" data-page="guides-joiner-bonus" class="cta-button guide-summary-button" data-key="view_guide_button">Voir le guide</a>
+        </div>
+        </div>
+</section>
+
+<style>
+.guide-list-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 30px;
+    margin-top: 30px;
+}
+
+.guide-summary-card {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    text-align: center;
+    padding: 25px;
+}
+
+.guide-summary-card h3 {
+    margin-top: 0;
+    font-size: 1.8em;
+    color: var(--color-purple);
+}
+
+.guide-summary-card p {
+    flex-grow: 1;
+    margin-bottom: 20px;
+}
+
+.guide-summary-button {
+    margin-top: auto; /* Pousse le bouton vers le bas de la carte */
+    padding: 10px 20px;
+    font-size: 1em;
+    background-color: var(--color-blue);
+}
+
+.guide-summary-button:hover {
+    background-color: var(--color-cta-hover);
+}
+</style>
