--- a/guides-koh.html
+++ b/guides-koh.html
@@ -3,16 +3,16 @@
     <p data-key="koh_intro">Ce guide détaille la stratégie pour l'événement King of the Hill (KoH), un événement de 60 minutes divisé en 3 étapes de 20 minutes chacune.</p>
 
     <div class="card guide-category">
-        <h3 data-key="koh_plan_title">Plan Initial : King of the Hill </h3>
+        <h3 data-key="koh_plan_title">Plan Initial : King of the Hill (Dimanche 18.08)</h3>
         <p data-key="koh_plan_info">Le plan alloue des équipes à des positions spécifiques avec des leaders et des membres.</p>
         <div class="koh-table-container">
             <table>
                 <thead>
                     <tr>
                         <th>KOH</th>
-                        <th data-key="koh_leader_a">Leader A (Center)</th>
-                        <th data-key="koh_leader_b">Leader B (Left)</th>
-                        <th data-key="koh_leader_c">Leader C (Right)</th>
+                        <th data-key="koh_leader_a">Équipe A (Centre)</th>
+                        <th data-key="koh_leader_b">Équipe B (Gauche)</th>
+                        <th data-key="koh_leader_c">Équipe C (Droite)</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -86,6 +86,7 @@
     </div>
 
     <div class="card note-card">
+        <p data-key="koh_bug_note">🚨 **NOTE IMPORTANTE :** Il y a des bugs dans le jeu concernant l'heure exacte des événements. Merci de vous connecter à **12:00 UTC** pour être en ligne.</p>
         <p class="note" data-key="koh_questions_pm">Si vous avez des questions concernant cet événement, vous pouvez me les poser en message privé.</p>
     </div>
 </section>
