--- a/contact.html
+++ b/contact.html
@@ -3,10 +3,30 @@
     <div class="card contact-card">
         <p data-key="contact_intro">Des questions, des suggestions, ou besoin d'aide ? N'hésitez pas à nous contacter !</p>
         <form class="contact-form">
-            <input type="text" placeholder="Votre Nom" required aria-label="Your Name" data-key="contact_name_placeholder">
-            <input type="email" placeholder="Votre Email" required aria-label="Your Email" data-key="contact_email_placeholder">
-            <textarea placeholder="Votre Message" rows="5" required aria-label="Your Message" data-key="contact_message_placeholder"></textarea>
+            <label for="contact-name" class="hidden-label" data-key="contact_name_label">Votre Nom</label>
+            <input type="text" id="contact-name" name="user_name" placeholder="Votre Nom" required aria-label="Your Name" data-key="contact_name_placeholder">
+
+            <label for="contact-email" class="hidden-label" data-key="contact_email_label">Votre Email</label>
+            <input type="email" id="contact-email" name="user_email" placeholder="Votre Email" required aria-label="Your Email" data-key="contact_email_placeholder">
+
+            <label for="contact-message" class="hidden-label" data-key="contact_message_label">Votre Message</label>
+            <textarea id="contact-message" name="user_message" placeholder="Votre Message" rows="5" required aria-label="Your Message" data-key="contact_message_placeholder"></textarea>
+            
             <button type="submit" class="cta-button" data-key="contact_send_button">Envoyer le Message</button>
         </form>
     </div>
 </section>
+
+<style>
+.hidden-label {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    white-space: nowrap;
+    border: 0;
+}
+</style>
